# zephyr-labs

./: .gitignore  README.md  west.yml
.github/ISSUE_TEMPLATE/: todo-event-bus.md
.github/workflows/: build.yml
apps/app_event_bus/: CMakeLists.txt  prj.conf
apps/app_event_bus/docs/: event_bus_sequence_diagram.md
apps/app_event_bus/src/: callback_receiver.c  main.c  polling_receiver.c  processing_thread.c  processing_thread.h  sender.c
apps/my_gpio_app/: CMakeLists.txt
apps/my_gpio_app/src/: main.c
apps/my_timer_app/: CMakeLists.txt  prj.conf
apps/my_timer_app/src/: main.c
apps/washing_machine_sim/: CMakeLists.txt  app.overlay  prj.conf
apps/washing_machine_sim/docs/: drain-thread.puml  drain.puml  fill-threads.puml  fill.puml  readme_code_quality.md  wash-threads.puml  wash.puml  washing_machine_design.md
apps/washing_machine_sim/door_sensor/: CMakeLists.txt  prj.conf
apps/washing_machine_sim/door_sensor/include/: door_sensor.h
apps/washing_machine_sim/door_sensor/src/: door_sensor.c
apps/washing_machine_sim/fsm/: CMakeLists.txt
apps/washing_machine_sim/fsm/include/: fsm.h  l1_system_fsm.h
apps/washing_machine_sim/fsm/src/: fsm.c  l1_system_fsm.c  l1_system_fsm.h  l2_wash_cycle_fsm.c  l2_wash_cycle_fsm.h
apps/washing_machine_sim/fsm/tests/: CMakeLists.txt  prj.conf  testcase.yaml
apps/washing_machine_sim/fsm/tests/src/: test_fsm_dispatcher.c  test_l1_system_fsm.c  test_l2_wash_cycle_fsm.c  ztest_multithreaded.c
apps/washing_machine_sim/include/: fsm.h  main.h
apps/washing_machine_sim/sim_door_sensor/include/: sensor_door_thread.h  sim_door_sensor.h
apps/washing_machine_sim/sim_door_sensor/src/: sensor_door_thread.c  sim_door_sensor.c
apps/washing_machine_sim/sim_door_sensor/test/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
apps/washing_machine_sim/sim_door_sensor/test/src/: test_sim_door_sensor.c  ztest_sensor_door.c
apps/washing_machine_sim/sim_water_level/include/: sim_water_level.h
apps/washing_machine_sim/sim_water_level/src/: sim_water_level.c
apps/washing_machine_sim/sim_water_level/test/: CMakeLists.txt  testcase.yaml
apps/washing_machine_sim/sim_water_level/test/src/: test_sim_water_level.c
apps/washing_machine_sim/src/: fsm.c  main.c  shell_interface.c  shell_interface.h
apps/washing_machine_sim/src/controller/: controller_thread.c  controller_thread.h
apps/washing_machine_sim/test/: CMakeLists.txt  prj.conf  testcase.yaml
apps/washing_machine_sim/test/src/: test_fsm.c  test_wm.c
components/event_bus/: CMakeLists.txt  README.md
components/event_bus/docs/design/: event_bus_design.md
components/event_bus/include/: event_bus.h  event_defs.h
components/event_bus/src/: CMakeLists.txt  Kconfig  event_bus.c
components/event_bus/tests/: CMakeLists.txt  prj.conf  testcase.yaml
components/event_bus/tests/src/: test_event_bus.c
components/event_bus/zephyr/: module.yml
scripts/: build_app.sh  clean_app.sh  create-app-native-sim.sh  run_app.sh
